--- a/templates/home.html
+++ b/templates/home.html
@@ -184,6 +184,79 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Marketing Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="integrator-marketing-section padding-bottom-150 integrator-subsection">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Продажи и маркетинг
+      </h2>
+      <p class="integrator-text text-center">Собирайте заявки из всех каналов, заполняйте документы, выставляйте счета. Подключайте почту, телефонию, соцсети, рекламу, сквозную аналитику. Ни один клиент не будет потерян или забыт!</p>
+    </div>
+    <div class="integrator-check-points">
+      <div class="integrator-row">
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            01
+          </span>
+          <h4 class="point-title">Сегментация клиентов</h4>
+        </div>
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            02
+          </span>
+          <h4 class="point-title">Интеграция с 1С</h4>
+        </div>
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            03
+          </span>
+          <h4 class="point-title">Автоматизация продаж</h4>
+        </div>
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            04
+          </span>
+          <h4 class="point-title">Планы продаж и отчёты</h4>
+        </div>
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            05
+          </span>
+          <h4 class="point-title">Рассылки</h4>
+        </div>
+        <div class="integrator-check-point">
+          <span class="poin-number">
+            06
+          </span>
+          <h4 class="point-title">CRM</h4>
+        </div>
+      </div>
+      <div class="integrator-row">
+        <div class="integrator-check-point integrator-check-point-large">
+          <div class="check-point-large">
+            <span class="poin-number">
+              07
+            </span>
+            <h4 class="point-title">История каждой сделки</h4>
+          </div>
+          <div class="check-point-large__image"><img src="{% static '/image/service/marketing-1.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-check-point integrator-check-point-large">
+          <div class="check-point-large">
+            <span class="poin-number">
+              08
+            </span>
+            <h4 class="point-title">Сбор лидов из всех каналов</h4>
+          </div>
+          <div class="check-point-large__image"><img src="{% static '/image/service/marketing-2.png' %}" alt=""></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1  : Content Section 1
