--- a/templates/home.html
+++ b/templates/home.html
@@ -193,7 +193,9 @@
       <h2 class="integrator-subheading heading-md text-center">
         Продажи и маркетинг
       </h2>
-      <p class="integrator-text text-center">Собирайте заявки из всех каналов, заполняйте документы, выставляйте счета. Подключайте почту, телефонию, соцсети, рекламу, сквозную аналитику. Ни один клиент не будет потерян или забыт!</p>
+      <p class="integrator-text text-center">Собирайте заявки из всех каналов, заполняйте документы, выставляйте счета.
+        Подключайте почту, телефонию, соцсети, рекламу, сквозную аналитику. Ни один клиент не будет потерян или забыт!
+      </p>
     </div>
     <div class="integrator-check-points">
       <div class="integrator-row">
@@ -258,6 +260,86 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Task Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-task-section padding-bottom-150 padding-top-150" id="feature">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Задачи и проекты
+      </h2>
+      <p class="integrator-text text-center">Управляйте командой, контролируйте проекты, назначайте ответственных,
+        создавайте чек-листы, используйте шаблоны регулярных задач. Успевайте больше и получайте высокую
+        производительность сотрудников.</p>
+      <a href="#" class="integrator-btn btn-fill--up">
+        <span>Начать использовать Битрикс24</span>
+      </a>
+    </div>
+    <div class="integrator-task">
+      <div class="integrator-task-three">
+        <div class="integrator-task-item task-blue task-flex">
+          <div class="task-point">
+            <h4 class="point-title">Мобильное приложение</h4>
+          </div>
+          <div class="task-point__image task-point__image-small"><img src="{% static '/image/home/task-1.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">Управление проектами в разных режимах</h4>
+          </div>
+          <div class="task-point__image"><img src="{% static '/image/home/task-2.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">CoPilot — ваш личный ассистент</h4>
+          </div>
+          <div class="task-point__image"><img src="{% static '/image/home/task-3.png' %}" alt=""></div>
+        </div>
+      </div>
+      <div class="integrator-task-three">
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">Роли и права доступа</h4>
+          </div>
+          <div class="task-point__image-right"><img src="{% static '/image/home/task-4.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-task-item task-blue">
+          <div class="task-point">
+            <h4 class="point-title">Шаблоны задач и роботы</h4>
+          </div>
+          <div class="task-point__image-right"><img src="{% static '/image/home/task-5.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">История каждой задачи</h4>
+          </div>
+          <div class="task-point__image"><img src="{% static '/image/home/task-6.png' %}" alt=""></div>
+        </div>
+      </div>
+      <div class="integrator-task-two">
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">Постановка задач в 2 клика</h4>
+          </div>
+          <div class="task-point__image-full"><img src="{% static '/image/home/task-7.png' %}" alt=""></div>
+        </div>
+        <div class="integrator-task-item task-white">
+          <div class="task-point">
+            <h4 class="point-title">KPI и отчёты</h4>
+          </div>
+          <div class="task-point__image-full"><img src="{% static '/image/home/task-8.png' %}" alt=""></div>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="integrator-cta-base_over">
+    <img src="{% static '/image/home/three-bubles.png' %}" alt="Bubbles" />
+  </div>
+</div>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Interesting Section
@@ -272,42 +354,50 @@
       <p class="integrator-text text-center">Тогда вам может быть интересно это</p>
     </div>
     <div class="integrator-interesting-points">
-        <div class="interesting-point">
-          <span class="poin-number">
-            01
-          </span>
-          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-1.png' %}" alt="image alt" class="inline-svg" /></div>
-          <h3 class="interesting-title">Продление лицензии Битрикс24</h3>
-          <p class="integrator-text">Продлевайте лицензию с Правильными Интеграторами, чтобы продолжать пользоваться привычными преимуществами Битрикс24.</p>
-          <a href="" class="interesting-more">Узнать больше</a>
-        </div>
-        <div class="interesting-point">
-          <span class="poin-number">
-            02
-          </span>
-          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-2.png' %}" alt="image alt" class="inline-svg" /></div>
-          <h3 class="interesting-title">Подписка на Маркет Битрикс24</h3>
-          <p class="integrator-text">Расширьте функционал Битрикс24 с подпиской на Маркет. Вы получите дополнительные интеграции с сервисами и увеличение функционала основных инструментов.</p>
-          <a href="" class="interesting-more">Узнать больше</a>
-        </div>
-        <div class="interesting-point">
-          <span class="poin-number">
-            03
-          </span>
-          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-3.png' %}" alt="image alt" class="inline-svg" /></div>
-          <h3 class="interesting-title">1C-Битрикс24: Enterprise</h3>
-          <p class="integrator-text">Enterprise — решение для крупного бизнеса от Битрикс24. Интеграция в вашу IT-инфраструктуру, для непрерывной работы портала 24/7.</p>
-          <a href="" class="interesting-more">Узнать больше</a>
-        </div>
-        <div class="interesting-point">
-          <span class="poin-number">
-            04
-          </span>
-          <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-4.png' %}" alt="image alt" class="inline-svg" /></div>
-          <h3 class="interesting-title">Посмотреть все услуги</h3>
-          <p class="integrator-text">Пакетное и проектное внедрение Битрикс24, поддержка коробочной версии, разработкаи настройка интеграций с Битрикс24 и многое другое для работы вашего Бизнеса.</p>
-          <a href="" class="interesting-more">Узнать больше</a>
-        </div>
+      <div class="interesting-point">
+        <span class="poin-number">
+          01
+        </span>
+        <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-1.png' %}" alt="image alt"
+            class="inline-svg" /></div>
+        <h3 class="interesting-title">Продление лицензии Битрикс24</h3>
+        <p class="integrator-text">Продлевайте лицензию с Правильными Интеграторами, чтобы продолжать пользоваться
+          привычными преимуществами Битрикс24.</p>
+        <a href="" class="interesting-more">Узнать больше</a>
+      </div>
+      <div class="interesting-point">
+        <span class="poin-number">
+          02
+        </span>
+        <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-2.png' %}" alt="image alt"
+            class="inline-svg" /></div>
+        <h3 class="interesting-title">Подписка на Маркет Битрикс24</h3>
+        <p class="integrator-text">Расширьте функционал Битрикс24 с подпиской на Маркет. Вы получите дополнительные
+          интеграции с сервисами и увеличение функционала основных инструментов.</p>
+        <a href="" class="interesting-more">Узнать больше</a>
+      </div>
+      <div class="interesting-point">
+        <span class="poin-number">
+          03
+        </span>
+        <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-3.png' %}" alt="image alt"
+            class="inline-svg" /></div>
+        <h3 class="interesting-title">1C-Битрикс24: Enterprise</h3>
+        <p class="integrator-text">Enterprise — решение для крупного бизнеса от Битрикс24. Интеграция в вашу
+          IT-инфраструктуру, для непрерывной работы портала 24/7.</p>
+        <a href="" class="interesting-more">Узнать больше</a>
+      </div>
+      <div class="interesting-point">
+        <span class="poin-number">
+          04
+        </span>
+        <div class="interesting-image"><img src="{% static '/image/icons/interesting-icon-4.png' %}" alt="image alt"
+            class="inline-svg" /></div>
+        <h3 class="interesting-title">Посмотреть все услуги</h3>
+        <p class="integrator-text">Пакетное и проектное внедрение Битрикс24, поддержка коробочной версии, разработкаи
+          настройка интеграций с Битрикс24 и многое другое для работы вашего Бизнеса.</p>
+        <a href="" class="interesting-more">Узнать больше</a>
+      </div>
     </div>
   </div>
   <div class="integrator-cta-base_over">
@@ -382,7 +472,7 @@
 
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Home 1  : FAQ Section 
+    FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
 <div class="integrator-faq-section padding-bottom-150 integrator-subsection">
