--- a/templates/home.html
+++ b/templates/home.html
@@ -340,6 +340,364 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Price Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-price-section padding-bottom-150 padding-top-150">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Битрикс24 — это полный набор инструментов для работы вашего бизнеса
+      </h2>
+      <p class="integrator-text text-center">Цены указаны за всю компанию, а не за отдельных пользователей</p>
+    </div>
+    <div class="integrator-price">
+      <div class="integrator_pricing-control-block price" bis_skin_checked="1">
+        <div class="pricing-control" bis_skin_checked="0">
+          <span data-pricing-trigger="pricing-0" data-target="oblako" class="active">Облачная версия</span>
+          <span data-pricing-trigger="pricing-0" data-target="korobka" class="">Коробочная версия</span>
+        </div>
+        <div class="pricing-control" bis_skin_checked="1">
+          <span data-pricing-trigger="pricing-1" data-target="monthly" class="active">Купить на месяц</span>
+          <span data-pricing-trigger="pricing-1" data-target="yearly" class="">Купить на год</span>
+        </div>
+      </div>
+      <div class="plans-4 mt-5" data-plan-id="pricing-1" data-plan-active="monthly" data-plan-active="oblako">
+        <div class="plan plan-base">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">Бесплатный</div>
+            <p>Начните работать онлайн и продавать больше с CRM</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+            <div>
+              <div class="text-center p-2">
+                <div>
+                  <b>неограниченно <br />пользователей</b>
+                </div>
+                <div class="service-card__title mt-2">Бесплатно</div>
+                <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                  <span>Создать</span>
+                </a>
+                <div class="mt-4">
+                  <b>5 ГБ</b>
+                </div>
+              </div>
+              <div class="plan__line mt-4"></div>
+              <div class="">
+                <div class="plan__subtitle">
+                  <b>Совместная работа</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Календарь</li>
+                    <li class="pt-2">Соцсеть компании</li>
+                    <li class="pt-2">Лента</li>
+                    <li class="pt-2">Доски</li>
+                    <li class="pt-2">База знаний</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Мессенджер</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Чат</li>
+                    <li class="pt-2">Каналы</li>
+                    <li class="pt-2">Битрикс24 Синк</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Коллабы</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Задачи и проекты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CRM</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CoPilot</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Онлайн-подпись</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Диск</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Контакт-центр</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Сайты</b>
+                </div>
+              </div>
+            </div>
+            <div></div>
+          </div>
+        </div>
+        <div class="plan plan-base">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">Базовый</div>
+            <p>CRM для небольших отделов продаж</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+            <div>
+              <div class="text-center p-2">
+                <div>
+                  <b>5 <br />
+                    пользователей</b>
+                </div>
+                <div class="service-card__title mt-2 dynamic-value" data-yearly="64 BYN/мес" data-monthly="80 BYN/мес">80
+                  BYN/мес</div>
+                <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                  <span>Создать</span>
+                </a>
+                <div class="mt-4">
+                  <b>24 ГБ</b>
+                </div>
+              </div>
+              <div class="plan__line mt-4"></div>
+              <div class="">
+                <div class="plan__subtitle">
+                  <b>Совместная работа</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Календарь</li>
+                    <li class="pt-2">Соцсеть компании</li>
+                    <li class="pt-2">Лента</li>
+                    <li class="pt-2">Доски</li>
+                    <li class="pt-2">База знаний</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Мессенджер</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Чат</li>
+                    <li class="pt-2">Каналы</li>
+                    <li class="pt-2">Битрикс24 Синк</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Коллабы</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Задачи и проекты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CRM</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CoPilot</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Онлайн-подпись</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Диск</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Контакт-центр</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Сайты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Интернет-магазин</b>
+                </div>
+              </div>
+            </div>
+            <div style="height: 96px;">
+              <div class="plan__subtitle">
+                <b>Поддержка</b>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="plan plan-blue">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">Стандартный</div>
+            <p>Для совместной работы всей компании или рабочих групп</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+            <div>
+              <div class="text-center p-2">
+                <div>
+                  <b>50 <br />
+                    пользователей</b>
+                </div>
+                <div class="service-card__title mt-2 dynamic-value" data-yearly="176 BYN/мес" data-monthly="219 BYN/мес">
+                  219 BYN/мес</div>
+                <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                  <span>Создать</span>
+                </a>
+                <div class="mt-4">
+                  <b>100 ГБ</b>
+                </div>
+              </div>
+              <div class="plan__line mt-4"></div>
+              <div class="">
+                <div class="plan__subtitle">
+                  <b>Совместная работа</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Календарь</li>
+                    <li class="pt-2">Соцсеть компании</li>
+                    <li class="pt-2">Лента</li>
+                    <li class="pt-2">Доски</li>
+                    <li class="pt-2">База знаний</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Мессенджер</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Чат</li>
+                    <li class="pt-2">Каналы</li>
+                    <li class="pt-2">Битрикс24 Синк</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Коллабы</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Задачи и проекты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CRM</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CoPilot</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Онлайн-подпись</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Диск</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Контакт-центр</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Сайты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Интернет-магазин</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Маркетинг</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Документы Онлайн</b>
+                </div>
+              </div>
+            </div>
+            <div style="height: 96px;">
+              <div class="plan__subtitle">
+                <b>Поддержка</b>
+              </div>
+              <div class="plan__subtitle">
+                <b>Администрирование</b>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="plan plan-purple">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">Профессиональный</div>
+            <p>Для максимальной автоматизации всех процессов в компании</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+            <div>
+              <div class="text-center p-2">
+                <div>
+                  <b>100 <br />
+                    пользователей</b>
+                </div>
+                <div class="service-card__title mt-2 dynamic-value" data-yearly="352 BYN/мес" data-monthly="439 BYN/мес">
+                  439 BYN/мес</div>
+                <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                  <span>Создать</span>
+                </a>
+                <div class="mt-4">
+                  <b>1 024 ГБ</b>
+                </div>
+              </div>
+              <div class="plan__line mt-4"></div>
+              <div class="">
+                <div class="plan__subtitle">
+                  <b>Совместная работа</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Календарь</li>
+                    <li class="pt-2">Соцсеть компании</li>
+                    <li class="pt-2">Лента</li>
+                    <li class="pt-2">Доски</li>
+                    <li class="pt-2">База знаний</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Мессенджер</b>
+                  <ul class="ms-3">
+                    <li class="pt-2">Чат</li>
+                    <li class="pt-2">Каналы</li>
+                    <li class="pt-2">Битрикс24 Синк</li>
+                  </ul>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Коллабы</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Задачи и проекты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CRM</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>CoPilot</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Онлайн-подпись</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Диск</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Контакт-центр</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Сайты</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Интернет-магазин</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Маркетинг</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Документы Онлайн</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Онлайн-запись</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Сквозная аналитика</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Автоматизация</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>HR: Компания</b>
+                </div>
+              </div>
+            </div>
+            <div style="height: 96px;">
+              <div class="plan__subtitle">
+                <b>Поддержка</b>
+              </div>
+              <div class="plan__subtitle">
+                <b>Администрирование</b>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Interesting Section
